--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,12 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Carattere&family=Kanit:ital@0;1&family=Madimi+One&family=Merienda:wght@300&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Permanent+Marker&family=Poppins:ital@1&family=Roboto+Slab:wght@300&display=swap"
     rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Carattere&family=Kanit:ital@0;1&family=Kings&family=Madimi+One&family=Merienda:wght@300&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Permanent+Marker&family=Poppins:ital@1&family=Roboto+Slab:wght@300&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Carattere&family=Diplomata&family=Kanit:ital@0;1&family=Kings&family=Madimi+One&family=Merienda:wght@300&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Permanent+Marker&family=Poppins:ital@1&family=Roboto+Slab:wght@300&display=swap"
+    rel="stylesheet">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
